trying to fix spacing on dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,6 @@ a:focus { color: #FAD472; text-decoration: underline;}
 
   html{
   height: 100%;
-  margin-bottom: 30px;
   }
 
 
