--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -5,6 +5,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  height:100%;
 }
 
 
@@ -72,10 +73,10 @@
   width:80%;
   margin:auto;
   margin-top:50px;
-  padding: 30px 15px;
+  padding: 15px 15px;
   font-size:18px;
   border: 1px solid #eee;
-  border-radius: 20px;
+  border-radius: 10px;
   text-align: center;
 }
 
